Bug 1615205: Remove overflow style from error message panel. r=pbro
Differential Revision: https://phabricator.services.mozilla.com/D62714

UltraBlame original commit: f4b83061fc6001c274891a2fffbbe207feed6139

--- a/devtools/client/themes/animation.css
+++ b/devtools/client/themes/animation.css
@@ -4712,18 +4712,6 @@ animation
 error
 -
 message
-{
-overflow
-:
-auto
-;
-}
-.
-animation
--
-error
--
-message
 >
 p
 {
@@ -4732,6 +4720,8 @@ white
 space
 :
 pre
+-
+wrap
 ;
 }
 .
